fix: bug fix z-index links

--- a/src/components/gallery/gallery.module.css
+++ b/src/components/gallery/gallery.module.css
@@ -18,6 +18,7 @@
   width: 100%;
   height: 55.3rem;
   text-decoration: none;
+  z-index: 0;
 }
 
 .img {
